# Distributed-Social-Gaming-Engine

./: .gitignore  CMakeLists.txt  Dockerfile  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  Message.h  Networking.cpp  Networking.h  README.md  WebSocket.cpp  WebSocket.h  WebSocketNetworking.h  WebsocketNetworking.cpp  binding.gyp  grammar.js  main.cpp  package.json  parser.cpp  tree-sitter.json  ws_main.cpp
.github/workflows/: ci.yml
bindings/node/: binding.cc
docs/: networking-safeguards.md  protocol.md
games/: hello-test.game  test-supported.game
parser/: ASTConverter.cpp  ASTConverter.h  CMakeLists.txt  GameSpec.h  GameSpecLoader.cpp  GameSpecLoader.h  NodeTypes.h  ParserUtil.cpp  ParserUtil.h  TreeSitterUtil.h
parser/tree_sitter/: parser.c
scripts/: simulate_clients.py
src/: CMakeLists.txt  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  Logger.cpp  Message.h  MessageTranslator.cpp  Networking.cpp  Networking.h  WebSocketNetworking.h  WebsocketNetworking.cpp  grammar.json  main.cpp  node-types.json  parser.c
src/GameEngine/: CMakeLists.txt  Game.cpp  Game.h  GameInterpreter.cpp  GameInterpreter.h  GameMessage.h  GameRuntime.h  InputManager.cpp  InputManager.h  Player.h  Rules.cpp  Rules.h  Types.h  VariableMap.h
src/GameServer/: CMakeLists.txt  GameServer.cpp  GameServer.h
src/GameSession/: CMakeLists.txt  GameSession.cpp  GameSession.h
src/Lobby/: CMakeLists.txt  Lobby.cpp  Lobby.h  LobbyRegistry.cpp  LobbyRegistry.h  LobbyTypes.h
src/Network/: CMakeLists.txt  MessageTranslator.cpp  MessageTranslator.h  NetworkManager.cpp  NetworkManager.h  WebsocketNetworking.cpp
src/lib/: add.cpp  add.h  test.html
test/corpus/: rules.game  setup.game  valuemap.game
tests/: ASTConverterTest.cpp  CMakeLists.txt  ForLoopRuleTest.cpp  GameInterpreterSmokeTest.cpp  GameInterpreterTest.cpp  GameRuntimeTest.cpp  GameServerTest.cpp  GameSessionTest.cpp  GameSpecLoaderTest.cpp  GameTest.cpp  GameWorkflowTest.cpp  InMemoryNetworkingTests.cpp  InputDebugTest.cpp  InputManagerTest.cpp  LobbyRegistryTest.cpp  Logger_test.cpp  MessageTranslatorTest.cpp  RPSFullConversionTest.cpp  RPSMinimalTest.cpp  RulesTest.cpp  TypesTest.cpp  WebSocketNetworkingTest.cpp  WebSocketNetworkingTests.cpp  dummy_ws.html  manual_test_plan.md  test_add.cpp
tests/GameInterpreterTests/: AssignmentTest.cpp  CallableTest.cpp  ComparisonTest.cpp  ConstantTest.cpp  DiscardTest.cpp  ExtendTest.cpp  ForLoopTest.cpp  Helpers.h  InputTextStmtTest.cpp  LogicalOperationTest.cpp  MatchTest.cpp  ProgramTest.cpp  RerverseTest.cpp  ShuffleTest.cpp  SortTest.cpp  UnaryOperationTest.cpp
tests/ParserTests/: ASTConverterTest.cpp  ForLoopDebugTest.cpp  FullRPSParseTest.cpp  GameSpecLoaderTest.cpp  GameSpecLoaderTest.h  IntegrationTest.cpp  MessageScoresDebugTest.cpp  MethodCallDebugTest.cpp  RPSFullConversionTest.cpp  RPSMinimalTest.cpp
